--- a/src/pages/areas/pasadena/oven-repair-pasadena.astro
+++ b/src/pages/areas/pasadena/oven-repair-pasadena.astro
@@ -7,7 +7,7 @@ import Reviews from "@components/reviews.astro";
 import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 
-import "css/service-areas/style-service-areas.css";
+import "css/service-areas/pasadena/style-service-areas-pasadena.css";
 ---
 
 <Navbar />
@@ -25,11 +25,11 @@ import "css/service-areas/style-service-areas.css";
             width="600px"
             height="600px"
             alt="Oven Repair, Pasadena, CA"
-            src="/images/same-day-appliance-repair-experts.webp"
+            src="/oven-repair/1-oven.webp"
           />
           <Contactbtn />
         </div>
-        <h2>Oven Repair, Pasadena - Electric and Gas </h2>
+        <h2 style="padding: 1% 0% 2% 0%;">Oven Repair, Pasadena - Electric and Gas </h2>
       <p>At Same Day Appliance Repair, we are a family-owned business committed to enhancing your customer experience. We
         understand the frustration of appliance repairs, and we pride ourselves on our transparency and reliability. This page
         is designed to give you a thorough understanding of our pricing policies, the costs associated with oven repairs, and
@@ -87,7 +87,7 @@ import "css/service-areas/style-service-areas.css";
         
             <div class="head-content-f">
               <img
-                src="/dryer-repair/dryer-repair-1.webp"
+                src="/oven-repair/2-oven.webp"
                 alt="Oven Repair, Pasadena"
                 width="450px"
                 height="450px"
@@ -220,7 +220,7 @@ import "css/service-areas/style-service-areas.css";
         
             <div class="head-content-f">
               <img
-                src="/dryer-repair/dryer-repair-2.webp"
+                src="/oven-repair/3-oven.webp"
                 alt="Oven Repair, Pasadena"
                 width="450px"
                 height="450px"
@@ -316,7 +316,7 @@ import "css/service-areas/style-service-areas.css";
         
             <div class="head-content-f">
               <img
-                src="/dryer-repair/dryer-repair-4.webp"
+                src="/oven-repair/4-oven.webp"
                 alt="Oven Repair, Pasadena"
                 width="450px"
                 height="450px"
