--- a/src/pages/services/air-ducts-cleaning-and-repair-los-angeles.astro
+++ b/src/pages/services/air-ducts-cleaning-and-repair-los-angeles.astro
@@ -178,11 +178,11 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-1.webp"
+                src="/air-ducts-cleaning/air-ducts-cleaning-1.webp"
                 loading="lazy"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="Air Duct Cleaning Los Angeles"
               />
             </div>
 
@@ -223,10 +223,10 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc content__page-full-desc-ph-ri">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-3.webp"
+                src="/air-ducts-cleaning/air-ducts-cleaning-2.webp"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="Air Duct Cleaning Los Angeles"
                 loading="lazy"
               />
             </div>
@@ -273,10 +273,10 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-3.webp"
+                src="/air-ducts-cleaning/air-ducts-cleaning-3.webp"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="Air Duct Cleaning Los Angeles"
                 loading="lazy"
               />
             </div>
@@ -310,10 +310,10 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc content__page-full-desc-ph-ri">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-4.webp"
+                src="/air-ducts-cleaning/air-ducts-cleaning-4.webp"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="Air Duct Cleaning Los Angeles"
                 loading="lazy"
               />
             </div>
@@ -434,10 +434,10 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc content__page-full-desc-ph-ri">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-5.webp"
+                src="/air-ducts-cleaning/air-ducts-cleaning-5.webp"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="Air Duct Cleaning Los Angeles"
                 loading="lazy"
               />
             </div>
@@ -489,10 +489,10 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc content__page-full-desc-ph-ri">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-6.webp"
+                src="/air-ducts-cleaning/air-ducts-cleaning-6.webp"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="Air Duct Cleaning Los Angeles"
                 loading="lazy"
               />
             </div>
@@ -614,10 +614,10 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc content__page-full-desc-ph-ri">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-3.webp"
+                src="/air-ducts-cleaning/air-ducts-cleaning-7.webp"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="Air Duct Cleaning Los Angeles"
                 loading="lazy"
               />
             </div>
