--- a/src/pages/areas/pasadena/commercial-slushie-machine-repair-pasadena.astro
+++ b/src/pages/areas/pasadena/commercial-slushie-machine-repair-pasadena.astro
@@ -651,8 +651,8 @@ import "css/service-areas/pasadena/style-service-areas-pasadena.css";
         back in working order.</p>
       <p>We always do our best to find parts at a lower price for our customers. We do not make extra money on the parts; our
         priority is to make it as easy as possible for the customer.</p>
-      <h2>FAQs</h2>
-      <h2>What brands of commercial slushie machines do you repair?</h2>
+      <h2 style="padding: 4% 0 0 0" >FAQs</h2>
+      <h2 style="padding: 0% 0 2% 0;">What brands of commercial slushie machines do you repair?</h2>
       <p>At Same Day Appliance Repair, we specialize in repairing a wide range of commercial slushie machine brands. Our
         experienced technicians are trained to handle issues across various makes and models to ensure your business runs
         smoothly. Here are some of the brands we service:</p>
@@ -972,7 +972,7 @@ import "css/service-areas/pasadena/style-service-areas-pasadena.css";
 
 
 
-        
+
       <h2>How does the climate in Pasadena affect the performance of my slushie machine?</h2>
       <p>The climate in Pasadena can have a noticeable impact on the performance of your slushie machine. Here’s how various
         climate factors may affect your machine and what you can do to ensure optimal performance:</p>
