--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -28,14 +28,13 @@ import "@components/css-components/footer-cta.css";
     </div> -->
 
   </div>
-  <!--End reviews -->
 
   <h2>
     <span
       data-color="var(--blue-10)"
       style="background-color: var(--blue-10); color: inherit"
-      >Expert Appliance Repair Services Across All LA Locations</span
-    >
+      >Expert Appliance Repair Services Across All LA Locations
+      </span>
   </h2>
 
   <div class="feedback">
@@ -73,11 +72,15 @@ import "@components/css-components/footer-cta.css";
     height="400"
     title="Same Day Appliance Repair - areas we serve"
     src="https://www.google.com/maps/d/u/2/embed?mid=1WYfJlezd7yel0cIXNhjCrg5PrRJVxh0&ehbc=2E312F"
-    style="border:0;"></iframe>
+    style="border:0;">
+  </iframe>
 
   <footer>
+
     <div class="full-footer">
+
       <div class="button-footer">
+
         <div class="a_button-footer">
           <h3>Same Day Appliance Repair</h3>
           <h3>Don't Wait! Contact Us Today.</h3>
@@ -108,6 +111,7 @@ import "@components/css-components/footer-cta.css";
             >wine cellcooler repair</a
           >
         </div>
+
       </div>
 
       <div class="address-footer">
@@ -164,6 +168,7 @@ import "@components/css-components/footer-cta.css";
               </tbody>
             </table>
           </div>
+
         </div>
       </div>
 
@@ -203,8 +208,7 @@ import "@components/css-components/footer-cta.css";
               ><path
                 fill="fff"
                 d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.41 2-5.88 5.88a1 1 0 0 1-1.42 0L5.41 6zM20 17a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V7.41l5.88 5.88a3 3 0 0 0 4.24 0L20 7.41z"
-              ></path></svg
-            >
+              ></path></svg>
             <p>Email: info.pasadena@<wbr />samedayappliance<wbr />.repair</p>
           </div>
 
@@ -222,9 +226,11 @@ import "@components/css-components/footer-cta.css";
             </table>
           </div>
 
-
         </div>
       </div>
+
     </div>
+
   </footer>
+
 </div>
