--- a/src/pages/services/commercial-stove-repair-los-angeles.astro
+++ b/src/pages/services/commercial-stove-repair-los-angeles.astro
@@ -15,7 +15,7 @@ import "css/service/style_services.css";
 ---
 
 <Navbar />
-<Reviews />
+<!-- <Reviews /> -->
 <Layout title="Commercial Stove Repair Los Angeles And Nearby Areas">
   <Container>
     <main>
