--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const makeTitle = title
   : "Same Day Appliance Repair Services";
 ---
 
-<!--octype html-->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -34,10 +34,9 @@ const makeTitle = title
     <meta name="msvalidate.01" content="F2723BD576AB7FA778D3F53898576D0B" />
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <!--City Local 101 verification Code -->
-<meta name='citylocal101-verification' content='62654BWjbV4Z5wZcQOzmc' />
+    <meta name='citylocal101-verification' content='62654BWjbV4Z5wZcQOzmc' />
     <!-- сбор статистики -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5MBY27XES"
-    ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5MBY27XES"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -186,7 +185,6 @@ const makeTitle = title
 
   <body>
     <slot />
-    <!-- <Footer /> -->
 
     <style is:global>
       .H9lube img {
