--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -100,6 +100,7 @@ const menuitems = [
       { title: "Home Brands", path: "/brands/commercial-and-household" },
       { title: "Maytag", path: "/brands/maytag" },
       { title: "Viking", path: "/brands/viking-repair" },
+      { title: "Bosch", path: "/brands/bosch" },
 
     ],
   },
