--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -22,7 +22,7 @@ import "css/service-areas/style-service-areas.css";
   <Container>
     <div class="content">
       <h1 class="top">
-        <span class="animate-charcter">Same Day</span> Appliance Repair Pasadena
+        <span class="animate-charcter">Same Day Appliance Repair Pasadena</span>
       </h1>
       <div class="two-col-grid">
         <div class="col-one">
