--- a/src/components/units-commercial-equipment-pasadena.astro
+++ b/src/components/units-commercial-equipment-pasadena.astro
@@ -4,6 +4,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
 <!-- коммерческая техника -->
 <div class="full-conteiner-machinery">
+
+  
   <div class="content-machinery">
     <div class="f-content-machinery">
       <img
@@ -18,8 +20,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery">
-      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
-      >
+      <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
@@ -27,6 +28,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
     
   </div>
+
+
+
+
 
   <div class="content-machinery">
     <div class="f-content-machinery">
