--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -252,7 +252,7 @@ import "css/service-areas/style-service-areas.css";
             </p>
           </div>
           <Unitsappliances />
-          <p>
+          <p style="margin-top: 10px" >
             Our main goal is to provide high-quality and cost-effective
             solutions for your appliance repair needs in Pasadena with our
             standard service fee being $65 only. We believe in transparent
@@ -291,7 +291,7 @@ import "css/service-areas/style-service-areas.css";
             </p>
           </div>
           <Unitscommercial />
-          <p>
+          <p style="margin-top: 10px" >
             We understand that repairing commercial appliances can be
             challenging due to their larger size and complexity compared to Home
             ones. Hence, our technicians undergo specialized training in order
