--- a/src/components/units-commercial-equipment-pasadena.astro
+++ b/src/components/units-commercial-equipment-pasadena.astro
@@ -7,16 +7,22 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   
   <div class="content-machinery">
-    <div class="f-content-machinery">
-      <img
-        loading="lazy"
-        src="/units/commercial-refrigerator-repair.webp"
-        alt="Commercial refrigerator repair Pasadena "
-      />
-    </div>
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Refrigerator Repair Pasadena"
+      href="/areas/pasadena/commercial-refrigerator-repair-pasadena">
+      <div class="f-content-machinery">
+         <img
+          loading="lazy"
+          src="/units/commercial-refrigerator-repair.webp"
+          alt="Commercial refrigerator repair Pasadena "
+           />
+      </div>
 
-    <div class="d-content-machinery">
-      <p>Commercial Refrigerator Repair</p>
+      <div class="d-content-machinery">
+        <p>Commercial Refrigerator Repair</p>
+      </div>
+        </a>
     </div>
 
     <div class="but-content-machinery">
@@ -33,7 +39,13 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
 
 
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Freezer Repair Pasadena"
+      href="/areas/pasadena/commercial-freezer-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -42,8 +54,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       />
     </div>
 
-    <div class="d-content-machinery">
-      <p>Commercial Freezer Repair</p>
+      <div class="d-content-machinery">
+       <p>Commercial Freezer Repair</p>
+      </div>
+      </a>
     </div>
 
     <div class="but-content-machinery">
@@ -58,7 +72,23 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Washing Machine Repair Pasadena"
+      href="/areas/pasadena/commercial-washer-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -70,6 +100,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Commercial Washing Machine Repair</p>
     </div>
+    </a>
+  </div>
 
     <div class="but-content-machinery">
       <a title="Same day washer repair Pasadena" href="/book">BOOK US</a>
@@ -81,7 +113,20 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   </div>
 
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Dryer Repair Pasadena"
+      href="/areas/pasadena/commercial-dryer-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -93,6 +138,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Commercial Dryer Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Same day dryer repair Pasadena" href="/book">BOOK US</a>
@@ -104,7 +151,25 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Stove Repair Pasadena"
+      href="/areas/pasadena/commercial-stove-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -116,6 +181,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Commercial Stove Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Same day stove repair Pasadena" href="/book">BOOK US</a>
@@ -127,7 +194,18 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   </div>
 
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Dishwasher Repair Pasadena"
+      href="/areas/pasadena/commercial-dishwasher-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -139,6 +217,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Commercial Dishwasher Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Commercial dishwasher repair Pasadena" href="/book">BOOK US</a>
@@ -150,7 +230,22 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Oven Repair Pasadena"
+      href="/areas/pasadena/commercial-oven-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -162,6 +257,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Commercial Oven Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Same day oven repair Pasadena" href="/book">BOOK US</a>
@@ -173,7 +270,23 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Walk in cooler Repair Pasadena"
+      href="/areas/pasadena/commercial-walk-in-cooler-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -185,6 +298,9 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Walk in cooler Repair</p>
     </div>
+  </a>
+</div>
+
 
     <div class="but-content-machinery">
       <a title="Walk in cooler repair Pasadena" href="/book"
@@ -198,7 +314,22 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   </div>
 
+
+
+
+
+
+
+
+
+
+  
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Walk in freezer Repair Pasadena"
+      href="/areas/pasadena/commercial-walk-in-freezer-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -210,6 +341,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Walk in freezer Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Same day walk-in freezer repair Pasadena" href="/book"
@@ -223,7 +356,24 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Ice machine Repair Pasadena"
+      href="/areas/pasadena/commercial-ice-machine-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -235,6 +385,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Commercial Ice machine Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Same day ice mashine repair Pasadena" href="/book">BOOK US</a
@@ -247,7 +399,27 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Slushie machine Repair Pasadena"
+      href="/areas/pasadena/commercial-slushie-machine-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -259,6 +431,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Slushie machine Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Same day slushie mashine repair Pasadena" href="/book"
@@ -271,7 +445,27 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Showcase refrigerator/freezer Repair Pasadena"
+      href="/areas/pasadena/commercial-showcase-refrigerator-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -283,6 +477,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Showcase refrigerator/<wbr />freezer Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a
@@ -297,7 +493,24 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
   </div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Bar refrigerator Repair Pasadena"
+      href="/areas/pasadena/bar-refrigerator-repair-pasadena">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -309,6 +522,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Bar refrigerator Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Same day bar refrigerator repair Pasadena" href="/book"
@@ -321,7 +536,21 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
   </div>
 
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Fryer Machine Repair Pasadena"
+      href="#">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -333,6 +562,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Commercial Fryer Machine Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Same day gas dryer repair Pasadena" href="/book">BOOK US</a>
@@ -343,7 +574,23 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a
+      title="Commercial Laundry Repair Pasadena"
+      href="#">
     <div class="f-content-machinery">
       <img
         loading="lazy"
@@ -355,6 +602,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="d-content-machinery">
       <p>Commercial Laundry Repair</p>
     </div>
+  </a>
+</div>
 
     <div class="but-content-machinery">
       <a title="Same day Laundry Speed Queen repair Pasadena" href="/book"
