--- a/src/components/reviews.astro
+++ b/src/components/reviews.astro
@@ -11,7 +11,7 @@ import "@components/css-components/reviews.css";
     </p>
  
     <div class="header-licenses-foto">
-
+      <a href="#reviews">
       <div>
         <img
           src="/images/same-day-appliance-repair-licensed-2.webp"
@@ -68,6 +68,7 @@ import "@components/css-components/reviews.css";
         />
       </div>
 
+    </a>
     </div>
 
   </div>
