--- a/src/pages/services/microwave-repair-los-angeles/services/induction-cooktop-repair.astro
+++ b/src/pages/services/microwave-repair-los-angeles/services/induction-cooktop-repair.astro
@@ -1,5 +1,5 @@
 ---
 import { redirect } from '@astrojs/router';
 
-redirect('/services/microwave-repair-los-angeles');
+redirect('../../microwave-repair-los-angeles.astro');
 ---
