--- a/src/pages/services/microwave-repair-los-angeles/services/induction-cooktop-repair.astro
+++ b/src/pages/services/microwave-repair-los-angeles/services/induction-cooktop-repair.astro
@@ -1,5 +1,4 @@
----
-import { redirect } from '@astrojs/router';
 
-redirect('../../microwave-repair-los-angeles.astro');
----
+<script>
+  window.location.href = "/services/microwave-repair-los-angeles";
+</script>
