--- a/src/pages/services/oven-repair-los-angeles/services/induction-cooktop-repair.astro
+++ b/src/pages/services/oven-repair-los-angeles/services/induction-cooktop-repair.astro
@@ -1,5 +1,3 @@
----
-import { redirect } from '@astrojs/router';
-
-redirect('/services/oven-repair-los-angeles');
----
+<script>
+  window.location.replace("/services/oven-repair-los-angeles");
+</script>
