--- a/src/pages/services/microwave-repair-los-angeles/services/induction-cooktop-repair.astro
+++ b/src/pages/services/microwave-repair-los-angeles/services/induction-cooktop-repair.astro
@@ -1,4 +1,4 @@
 
 <script>
-  window.location.href = "/services/microwave-repair-los-angeles";
+  window.location.href = "/src/pages/services/microwave-repair-los-angeles.astro";
 </script>
