--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const makeTitle = title
     <!--City Local 101 verification Code -->
     <meta name='citylocal101-verification' content='62654BWjbV4Z5wZcQOzmc' />
     <!-- сбор статистики -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5MBY27XES"
+    <script rel="dns-prefetch" src="https://www.googletagmanager.com/gtag/js?id=G-F5MBY27XES"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
