--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const makeTitle = title
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <!--City Local 101 verification Code -->
     <meta name='citylocal101-verification' content='62654BWjbV4Z5wZcQOzmc' />
-    <!-- сбор статистики -->
+    <!-- сбор статистики 
     <script defer src="https://www.googletagmanager.com/gtag/js?id=G-F5MBY27XES"
     ></script>
     <script>
@@ -45,7 +45,7 @@ const makeTitle = title
       }
       gtag("js", new Date());
       gtag("config", "G-F5MBY27XES");
-    </script>
+    </script>-->
 
     <SEO
       title={makeTitle}
