--- a/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
@@ -11,10 +11,12 @@ import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
+const description = "Commercial Ice Machine Repair Los Angeles and Nearby Areas";
 
 import "css/service/style_services.css";
 ---
 
+<meta name="description" content={description} />
 <Navbar />
 <Reviews />
 <Layout title="Commercial Ice Machine Repair Los Angeles and Nearby Areas">
