--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -283,10 +283,11 @@ main {
 
   </style>
 
+<!-- description="Licenced, insured, up to 3 months of warranty. Ony trained technicians at Same Day Aplliance Repair Services. Call Us Today: (424) 325-0520" -->
 
     <SEO
       title={makeTitle}
-      description="Licenced, insured, up to 3 months of warranty. Ony trained technicians at Same Day Aplliance Repair Services. Call Us Today: (424) 325-0520"
+       
       canonical={canonicalURL}
       twitter={{
         creator: "@surjithctly",
