--- a/src/components/css-components/reviews.css
+++ b/src/components/css-components/reviews.css
@@ -1,4 +1,4 @@
-.reviews {
+/* .reviews {
     width: 100%;
     background-color: #000;
 }
@@ -70,4 +70,4 @@
     .reviews-header p {
         padding: 10px 10px 5px 10px;
     }
-}
+} */
