--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,9 +4,9 @@ import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import "@fontsource-variable/inter/index.css";
 import Btn from "@components/btn.astro";
-export interface Props {
-  title: string;
-}
+// export interface Props {
+//    title: string;
+// }
 const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
 
 const resolvedImageWithDomain = new URL(
@@ -14,11 +14,10 @@ const resolvedImageWithDomain = new URL(
   Astro.site,
 ).toString();
 
-const { title } = Astro.props;
-
-const makeTitle = title
-  ? title + " | " + "(424) 325-0520"
-  : "Same Day Appliance Repair Services";
+// const { title } = Astro.props;
+// const makeTitle = title
+//   ? title + " | " + "(424) 325-0520"
+//   : "Same Day Appliance Repair Services";
 ---
 
 <!DOCTYPE html>
@@ -1524,9 +1523,9 @@ button.hcp-button:hover {
   </style>
 
 
-
+<!-- title={makeTitle} -->
     <SEO
-      title={makeTitle}
+    
       canonical={canonicalURL}
       twitter={{
         creator: "@surjithctly",
