--- a/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
@@ -12,14 +12,18 @@ import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 const description = "Commercial Ice Machine Repair Los Angeles and Nearby Areas";
+const title ="hsdjhgdgdsdgsdgdi";
 
 import "css/service/style_services.css";
 ---
 
+
+
+<title>{title}</title>
 <meta name="description" content={description} />
 <Navbar />
 <Reviews />
-<Layout title="Commercial Ice Machine Repair Los Angeles and Nearby Areas">
+<Layout>
   <Container>
     <main>
       <div class="page-header">
