--- a/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
@@ -12,7 +12,7 @@ import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 const description = "Commercial Ice Machine Repair Los Angeles and Nearby Areas";
-const title ="hsdjhgdgdsdgsdgdi";
+const title ="Commercial Ice Machine Repair";
 
 import "css/service/style_services.css";
 ---
@@ -21,6 +21,8 @@ import "css/service/style_services.css";
 
 <title>{title}</title>
 <meta name="description" content={description} />
+
+
 <Navbar />
 <Reviews />
 <Layout>
