--- a/src/components/units-appliances-same-day.astro
+++ b/src/components/units-appliances-same-day.astro
@@ -469,7 +469,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Same day Wine Cellar Repair" href="/services/wine-cellar-repair-los-angeles">
+      <a title="Same day Wine Cellar Repair" href="/services/wine-cellar-repair-los-angeles/">
         <div class="f-content-machinery">
           <img
           loading="lazy"
@@ -490,7 +490,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Same day Wine Cellar Repair estimate" href="/services/wine-cellar-repair-los-angeles">ESTIMATES</a>
+      <a title="Same day Wine Cellar Repair estimate" href="/services/wine-cellar-repair-los-angeles/">ESTIMATES</a>
     </div>
   </div>
 
@@ -503,9 +503,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Same day Induction Cooktop Repair" href="/services/induction-cooktop-repair-los-angeles">
+      <a title="Same day Induction Cooktop Repair" href="/services/induction-cooktop-repair-los-angeles/">
         <div class="f-content-machinery">
           <img
+          style="box-shadow: 0px 0px 0 0px !important;"
           loading="lazy"
           src="/images/induction-cooktop.webp"
           alt="Same day Induction Cooktop Repair"
@@ -524,7 +525,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Same day Induction Cooktop Repair estimate" href="/services/induction-cooktop-repair-los-angeles">ESTIMATES</a>
+      <a title="Same day Induction Cooktop Repair estimate" href="/services/induction-cooktop-repair-los-angeles/">ESTIMATES</a>
     </div>
   </div>
 
